[tool.poetry]
name = "gens"
version = "0.1.0"
description = ""
authors = ["Alexander Lavrov <alexander.lavrov@elastoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
scipy = "^1.5.2"
numpy = "^1.19.2"
matplotlib = "^3.3.2"
opensimplex = "^0.3"
pillow = "^7.2.0"
unqlite = "^0.8.1"
cv = "^1.0.0"
noise = "^1.2.2"
zodb = "^5.6.0"
tqdm = "^4.50.2"
markovify = "^0.8.3"
nltk = "^3.5"
seaborn = "^0.11.0"
hkb_diamondsquare = "^1.0.2"
cython = "^0.29.21"
pre-commit = "^2.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | deploy
  | .bumpversion.cfg
)/
'''
